--- a/adapter/adapter-driving/pom.xml
+++ b/adapter/adapter-driving/pom.xml
@@ -20,6 +20,26 @@
             <artifactId>application</artifactId>
         </dependency>
 
+
+        <!-- mysql -->
+        <!--<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>-->
+        <!-- mysql -->
+
+        <!-- mybatis -->
+       <!-- <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>-->
+        <!-- mybatis -->
+
         <!-- mapstruct -->
         <dependency>
             <groupId>org.mapstruct</groupId>
