--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>adapter/adapter-driven</module>
         <module>adapter/adapter-driving</module>
         <module>common</module>
+        <module>bootstrap</module>
     </modules>
 
     <properties>
@@ -31,7 +32,18 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
@@ -81,8 +93,25 @@
                 <version>${org.mapstruct.version}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <!-- mysql -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>1.1.9</version>
+            </dependency>
+            <!-- mysql -->
+
+            <!-- mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+            <!-- mybatis -->
         </dependencies>
     </dependencyManagement>
+
 
 
 
