--- a/adapter/adapter-driving/pom.xml
+++ b/adapter/adapter-driving/pom.xml
@@ -22,7 +22,7 @@
 
 
         <!-- mysql -->
-        <!--<dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
@@ -30,14 +30,14 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-        </dependency>-->
+        </dependency>
         <!-- mysql -->
 
         <!-- mybatis -->
-       <!-- <dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>-->
+        </dependency>
         <!-- mybatis -->
 
         <!-- mapstruct -->
@@ -45,6 +45,7 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -70,7 +71,7 @@
                     <dependency>
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
-                        <version>5.1.44</version>
+                        <version>8.0.13</version>
                     </dependency>
                 </dependencies>
             </plugin>
