完成注册用户功能

--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.username=root
 spring.datasource.password=admin
 #	数据库驱动
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# mybatis控制台打印sql配置
+mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
