--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # 端口地址
-server.port=9527
+server.port=9092
 #mapper xml 文件地址
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 #	数据库url
-spring.datasource.url=jdbc:mysql://localhost:3306/lsz?characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://1.12.51.189:3306/lsz?characterEncoding=utf8&serverTimezone=UTC
 #	数据库用户名
 spring.datasource.username=root
 #	数据库密码
