--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -33,7 +33,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <outputDirectory>../../target</outputDirectory>
+                    <outputDirectory>../target</outputDirectory>
                     <classifier>executable</classifier>
                 </configuration>
                 <executions>
@@ -79,6 +79,7 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
